examples/test/testpolicy14812.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14812
  namespace: namespace379
spec:
  podSelector:
    matchLabels:
      key3: value17
      key7: value36
      key28: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value3
          key18: value1
      podSelector:
        matchLabels:
          key30: value31
          key45: value34
          key12: value37
